--- a/public_html/CSS/Temp.css
+++ b/public_html/CSS/Temp.css
@@ -76,6 +76,22 @@
     font-size: 20px;
     color: white;
 }
+.picture-attribution{
+
+    font-size: 16px;
+    padding-top: 630px;
+    position: center;
+    text-align: center;
+    color: grey;
+}
+.picture-attribution-Fifth{
+    font-size: 16px;
+    padding-top: 70px;
+    margin-left: 5px;
+    position: absolute;
+    text-align: center;
+    color: grey;
+}
 .start-btn{
     display: inline-block;
     text-decoration: none;
@@ -242,6 +258,10 @@ width: 100%;
     border-radius: 10px;
     object-fit: cover;
 }
+.fourthsection-col h5{
+    color: grey;
+    padding-bottom: 10px;
+}
 .fourthsection-col p{
     padding: 0;
 }
@@ -277,11 +297,11 @@ width: 100%;
 .footer{
     width: 100%;
     text-align: center;
-    padding: 30px 0;
+    padding: 20px 0;
 }
 .footer h4{
     margin-bottom: 20px;
-    margin-top: 20px;
+    margin-top: 10px;
     font-weight: bold;
 }
 .footer h5{
