--- a/public_html/CSS/Temp.css
+++ b/public_html/CSS/Temp.css
@@ -83,6 +83,7 @@
     position: center;
     text-align: center;
     color: grey;
+    padding-bottom: 10px;
 }
 .picture-attribution-Fifth{
     font-size: 16px;
@@ -92,7 +93,12 @@
     text-align: center;
     color: grey;
 }
-.start-btn{
+@media(max-width: 700px){
+    .picture-attribution-Fifth{
+        padding-top: 60px;
+    }
+}
+    .start-btn{
     display: inline-block;
     text-decoration: none;
     color: white;
@@ -293,6 +299,13 @@ width: 100%;
         font-size: 25px;
     }
 }
+
+@media(max-width: 700px) {
+    .picture-attribution-Fifth h4 {
+        font-size: 10px;
+    }
+}
+
 /*-------footersection------*/
 .footer{
     width: 100%;
@@ -308,7 +321,9 @@ width: 100%;
     width: 100%;
     text-align: center;
     font-weight: bold;
-    text-decoration: none
+    text-decoration: none;
+    padding-bottom: 10px;
+
 }
 .footer a{
     padding-right: 15px;
